// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search render correctly with value 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 12,
        "flexDirection": "row",
        "maxWidth": "95%",
        "padding": 9,
      },
      undefined,
    ]
  }
>
  <View />
  <TextInput
    accessibilityLabel="search"
    allowFontScaling={true}
    onChangeText={[MockFunction]}
    placeholder="Поиск"
    placeholderTextColor="#20242D"
    style={
      Array [
        Object {
          "color": "#20242D",
          "fontFamily": "Inter-Regular",
          "fontSize": 22.5,
          "lineHeight": 29,
        },
        Object {
          "flex": 1,
          "padding": 0,
        },
        undefined,
      ]
    }
    value="value"
  />
  <View
    accessibilityLabel="cancel"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#D1D4DB",
        "borderRadius": 97,
        "padding": 6,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Object {
          "color": "#5E6678",
          "fontFamily": "Neotis",
          "fontSize": 30.5,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Search render correctly without value 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 12,
        "flexDirection": "row",
        "maxWidth": "95%",
        "padding": 9,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Object {
        "color": "#5E6678",
        "fontFamily": "Neotis",
        "fontSize": 36.5,
      }
    }
  >
    
  </Text>
  <TextInput
    accessibilityLabel="search"
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Поиск"
    placeholderTextColor="#20242D"
    style={
      Array [
        Object {
          "color": "#20242D",
          "fontFamily": "Inter-Regular",
          "fontSize": 22.5,
          "lineHeight": 29,
        },
        Object {
          "flex": 1,
          "padding": 0,
        },
        undefined,
      ]
    }
  />
</View>
`;
